# dj-blog

./: db.sqlite3  pyproject.toml  tailwind.config.js
blog/: settings.py  urls.py
locale/es/LC_MESSAGES/: django.mo  django.po
locale/fr/LC_MESSAGES/: django.mo  django.po
locale/hi/LC_MESSAGES/: django.mo  django.po
posts/: models.py  urls.py  views.py
posts/migrations/: 0001_initial.py
posts/templates/posts/: home.html  post_detail.html  post_list.html  posts_list.html
theme/templates/: base.html
