[project]
name = "dj-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cookiecutter>=2.6.0",
    "django>=5.2.6",
    "django-rosetta>=0.10.2",
    "django-tailwind[reload]>=4.2.0",
    "djlint>=1.36.4",
    "honcho>=2.0.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pre-commit>=4.3.0",
    "ruff>=0.12.12",
]
